--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@ src="https://www.facebook.com/tr?id=1162676388934901&ev=PageView&noscript=1"
         <h5 style="margin-top: 6%; font-size: 95%; color: #C2FF00;"> STOCK MARKET BANKNIFTY FOREX TRADING </h5>
         <h6
             style="margin-top: 6%; font-size: 95%; background-color: azure; color: black; padding: 10px; border-radius: 50px;">
-            તમારી સમસ્યાનું નિરાકરણ આ ચેનલ પર આવશે. જો તમને જરૂર હોય, તો મારા પર વિશ્વાસ કરો કારણ કે જો તમે મારા પર
-            વિશ્વાસ નહીં કરો, તો મને કોઈ નુકસાન નહીં થાય, તે ફક્ત તમારું નુકસાન હશે. તમે હજારો અને લાખો રૂપિયા વેડફ્યા
-            છે.🇮🇳 </h6>
+            इस चैनल पर आपकी समस्या का समाधान हो जाएगा अगर आप जरूरतमंद है तो विश्वास कर लेना क्योंकि विश्वास न करने पर मेरा कोई नुकसान नहीं है आपका ही नुकसान है आपने वैसे भी तो हजारों लाखों रुपया बर्बाद किया है हमारे टेलीग्राम चैनल से जुड़े 🇮🇳 </h6>
         <a href="https://t.me/+S8MO3yP4BKUwYzI1" class="btn">
             <i class="fa-brands fa-telegram"></i>
             JOIN TELEGRAM FREE
@@ -85,3 +83,4 @@ src="https://www.facebook.com/tr?id=1162676388934901&ev=PageView&noscript=1"
 
 
 </html>
+
